front-end work, cant solve a problem with elements overflowing

--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -1,9 +1,9 @@
-$main_font_size: calc(1.2rem + 0.1vw);
+$main_font_size: calc(1.2rem + 0.4vw);
 $title_font_size: calc(1.25rem + 0.65vw);
 $heading_font_size: calc(1.5rem + 0.9vw);
 .game{
     height: 100%;
-    width: 95%;
+    width: 100%;
     padding: 4px;
     margin-left: auto;
     margin-right: auto;
@@ -86,4 +86,58 @@ $heading_font_size: calc(1.5rem + 0.9vw);
 .join_code{
     margin-bottom: 10px;
     font-size: $title_font_size;
+}
+.quiz{
+    width: 100%;
+    height: 100%;
+    /*
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    */
+    
+    display: grid;
+    grid-template-rows: 3fr 2fr;
+    
+    *{
+        font-size: $main_font_size;
+    }
+}
+.question_text{
+    max-width: 650px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.answer_choices{
+    width: 100%;
+    
+    padding: 2px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.answer_choice{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    flex: 1 1 0px;
+    margin: 8px;
+    padding: 12px;
+    border-radius: 12px;
+    background-color: hsla(0, 0%, 0%, 60%);
+    transition: background-color 0.3s;
+    cursor: pointer;
+}
+.answer_choice:hover{
+    background-color: hsla(0, 0%, 0%, 90%);
 }
